Update Capstone Toronto Postcodes.ipynb

--- a/Capstone Toronto Postcodes.ipynb
+++ b/Capstone Toronto Postcodes.ipynb
@@ -3445,7 +3445,7 @@
     "# merge toronto_grouped with toronto_data to add latitude/longitude for each neighborhood\n",
     "toronto_merged = toronto_merged.join(neighbourhoods_venues_sorted.set_index('Neighbourhood'), on='Neighbourhood')\n",
     "\n",
-    "toronto_merged.head() # check the last columns!"
+    "toronto_merged.head()"
    ]
   },
   {
