--- a/Coursera Project - Report.ipynb
+++ b/Coursera Project - Report.ipynb
@@ -51,7 +51,7 @@
     "1.\tPass London, UK along with the number of top venues required into Foursquare API call <br><br>\n",
     "2.\tDrop relevant venue information into a dataframe<br><br>\n",
     "\n",
-    "3.\tDefine a function to create a radar plot for each category type. This is done by: <br>\n",
+    "3.\tDefine a function to create a radar plot for each category type. This is done by: <br><br>\n",
     "    a.\tPlotting a polar coordinate axis <br>\n",
     "    b.\tSetting the number of points using the number of categories <br>\n",
     "    c.\tThen plotting the shape on the axis based on counts of each category <br><br>\n",
